fixed console text on mobile
This change was copied from a change I made in dev a long time ago, so I am committing directly.

--- a/website_project/static/css/master.css
+++ b/website_project/static/css/master.css
@@ -51,34 +51,38 @@ body > div {
 	margin-top: 2rem;
 }
 
-.console-container {
-	font-family: logoFont;
-	font-size: 3em;
-	text-align: center;
-	display: block;
-	position: relative;
-	color: white;
-	top: 100px;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin-top: -150px;
-	margin-left: 11%;
-	margin-right: 11%;
+@media (min-width: 1200px) {
+    .console-container {
+      font-family: logoFont;
+      font-size: 3em;
+      text-align: center;
+      display: block;
+      position: relative;
+      color: white;
+      top: 100px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
 }
 
-.console-container-construction {
-	font-family: logoFont;
-	font-size: 3em;
-	text-align: center;
-	margin-top: -85px;
-	display: block;
-	position: relative;
-	color: white;
-	top: 100px;
-	bottom: 0;
-	left: 0;
-	right: 0;
+@media (max-width: 1199px) {
+    .console-container {
+      font-family: logoFont;
+      font-size: 1.5em;
+      text-align: center;
+      display: block;
+      position: relative;
+      color: white;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    .construction {
+      top: 10%;
+      margin-top: 2%;
+    }
 }
 
 .construction_text {
